Styled the form

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
                     <p>
                         This is not a real online service! You know you need something
                         like this in your life to help you realize your deepest
-                        dreams. <br> Sign up <em>now</em> to get started.
+                        dreams. <br> Sign up <b>now</b> to get started.
                     </p>
-                    <p style="margin-top: 30px;">
-                        You <em>know</em> you want to.
+                    <p style="margin-top: 20px;">
+                        You <b>know</b> you want to.
                     </p>
             </section>
             <form action="#">
                 <div class="form-container">
-                    <p>Let's do this</p>
+                    <h3>Let's do this!</h3>
                     <fieldset>
                         <div class="info">
                             <label for="fname">First Name:</label>
@@ -45,7 +45,7 @@
                         </div>
                         <div class="info">
                             <label for="phno">Phone Number:</label>
-                            <input type="number" name="Phone" id="phno">
+                            <input type="text" name="Phone" id="phno">
                         </div>
                     </fieldset>
                     <fieldset>
@@ -61,7 +61,7 @@
                 </div>
                 <div class="button-area">
                    <button type="submit">Create Account</button>
-                   <p>Already have an account?<a href="#">Log in!</a></p>
+                   <p>Already have an account?<a href="#"> Log in!</a></p>
                 </div>
             </form>
      </main>
